--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  keyutils-1.6.1.tar.bz2: 79fb86ea60de1207183ecd0c3a038380d036b1cc
+  keyutils-1.6.3.tar.gz: 7e5112d68eef5677e474d062282a0e1d1f19904c
